[workspace]
resolver = "2"
members = [
    "triangle",
    "pushconstants",
    "descriptorsets/cube",
    "dynamicuniformbuffer/base",
    "multisampling/mesh",
    "texture",
    "pipelines/phong",
    "pipelines/toon",
    "pipelines/wireframe",
    "specializationconstants/uber",
    "computeshader/edgedetect",
    "computeshader/emboss",
    "computeshader/sharpen",
    "computeshader/texture",
    "texturearray/instancing",
    "base/uioverlay",
    "base/textoverlay",
    "gears",
    "screenshot/mesh",
    "negativeviewportheight/quad",
    "stencilbuffer/outline",
    "stencilbuffer/toon",
    "parallaxmapping/parallax",
    "computecloth/cloth",
    "computecloth/sphere",
    "ssao/ssao",
    "ssao/fullscreen",
    "ssao/gbuffer",
    "ssao/blur",
    "ssao/composition",
    "shadowmapping/offscreen",
    "shadowmapping/scene",
    "shadowmapping/quad",
    "deferred/mrt",
    "deferred/deferred",
    "computenbody/particle_calculate",
    "computenbody/particle_integrate",
    "computenbody/particle",
    "bloom/phongpass",
    "bloom/colorpass",
    "bloom/gaussblur",
    "bloom/skybox",
]

[workspace.dependencies]
spirv-std = { git = "https://github.com/LegNeato/rust-gpu.git", branch = "issue190" }
bytemuck = { version = "1.14", features = ["derive"] }

[profile.release]
panic = "abort"
opt-level = 3
