[workspace]
resolver = "2"
members = [
    "triangle",
    "pushconstants",
    "descriptorsets/cube",
    "dynamicuniformbuffer/base",
    "multisampling/mesh",
    "texture",
    "pipelines/phong",
    "pipelines/toon",
    "pipelines/wireframe",
    "specializationconstants/uber",
    "computeshader/edgedetect",
    "computeshader/emboss",
    "computeshader/sharpen",
    "computeshader/texture",
    "texturearray/instancing",
    "base/uioverlay",
    "base/textoverlay",
    "gears",
    "screenshot/mesh",
    "negativeviewportheight/quad",
    "stencilbuffer/outline",
    "stencilbuffer/toon",
    "parallaxmapping/parallax",
    "computecloth/cloth",
    "computecloth/sphere",
    "ssao/ssao",
    "ssao/fullscreen",
    "ssao/gbuffer",
    "ssao/blur",
    "ssao/composition",
    "shadowmapping/offscreen",
    "shadowmapping/scene",
    "shadowmapping/quad",
    "deferred/mrt",
    "deferred/deferred",
    "computenbody/particle_calculate",
    "computenbody/particle_integrate",
    "computenbody/particle",
    "bloom/phongpass",
    "bloom/colorpass",
    "bloom/gaussblur",
    "bloom/skybox",
    "hdr/gbuffer",
    "hdr/bloom",
    "hdr/composition",
    "radialblur/radialblur",
    "radialblur/colorpass",
    "radialblur/phongpass",
    "pbribl/pbribl",
    "pbribl/genbrdflut",
    "pbribl/irradiancecube",
    "pbribl/prefilterenvmap",
    "pbribl/skybox",
    "pbribl/filtercube",
    "indirectdraw/indirectdraw",
    "indirectdraw/ground",
    "indirectdraw/skysphere",
    "instancing/instancing",
    "instancing/planet",
    "instancing/starfield",
    "texture3d",
    "texturecubemap/reflect",
    "texturecubemap/skybox",
    "renderheadless/triangle",
    "sphericalenvmapping/sem",
    "occlusionquery/simple",
    "occlusionquery/mesh",
    "occlusionquery/occluder",
    "computeheadless/headless",
    "debugprintf/toon",
    "pushdescriptors/cube",
    "descriptorbuffer/cube",
    "dynamicrendering/texture",
    "computeparticles/particle",
    "distancefieldfonts/bitmap",
    "distancefieldfonts/sdf",
    "conditionalrender/model",
    "textoverlay/text",
    "textoverlay/mesh",
]

[workspace.dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu.git", branch = "main" }

[profile.release]
panic = "abort"
opt-level = 3
