[workspace]
resolver = "2"
members = [
    "base/textoverlay",
    "base/uioverlay",
    "bloom/colorpass",
    "bloom/gaussblur",
    "bloom/phongpass",
    "bloom/skybox",
    "computecloth/cloth",
    "computecloth/sphere",
    "computecullandlod/cull",
    "computecullandlod/indirectdraw",
    "computeheadless/headless",
    "computenbody/particle",
    "computenbody/particle_calculate",
    "computenbody/particle_integrate",
    "computeparticles/particle",
    "computeshader/edgedetect",
    "computeshader/emboss",
    "computeshader/sharpen",
    "computeshader/texture",
    "conditionalrender/model",
    "debugprintf/toon",
    "debugutils/colorpass",
    "debugutils/postprocess",
    "debugutils/toon",
    "deferred/deferred",
    "deferred/mrt",
    "deferredmultisampling/deferred",
    "deferredmultisampling/mrt",
    "descriptorbuffer/cube",
    "descriptorindexing",
    "descriptorsets/cube",
    "displacement/base",
    "displacement/displacement",
    "distancefieldfonts/bitmap",
    "distancefieldfonts/sdf",
    "dynamicrendering/texture",
    "dynamicuniformbuffer/base",
    "gears",
    "geometryshader/base",
    "geometryshader/mesh",
    "geometryshader/normaldebug",
    "gltfloading/mesh",
    "gltfscenerendering/scene",
    "gltfskinning/skinnedmodel",
    "graphicspipelinelibrary/shared",
    "graphicspipelinelibrary/uber",
    "hdr/bloom",
    "hdr/composition",
    "hdr/gbuffer",
    "imgui/scene",
    "imgui/ui",
    "indirectdraw/ground",
    "indirectdraw/indirectdraw",
    "indirectdraw/skysphere",
    "inlineuniformblocks/pbr",
    "instancing/instancing",
    "instancing/planet",
    "instancing/starfield",
    "inputattachments/attachmentwrite",
    "inputattachments/attachmentread",
    "multisampling/mesh",
    "multithreading/phong",
    "multithreading/starsphere",
    "multiview/multiview",
    "multiview/viewdisplay",
    "negativeviewportheight/quad",
    "occlusionquery/mesh",
    "occlusionquery/occluder",
    "occlusionquery/simple",
    "offscreen/mirror",
    "offscreen/phong",
    "offscreen/quad",
    "parallaxmapping/parallax",
    "particlesystem/particle",
    "particlesystem/normalmap",
    "pbrbasic/pbr",
    "pbribl/filtercube",
    "pbribl/genbrdflut",
    "pbribl/irradiancecube",
    "pbribl/pbribl",
    "pbribl/prefilterenvmap",
    "pbribl/skybox",
    "pipelines/phong",
    "pipelines/toon",
    "pipelines/wireframe",
    "pushconstants",
    "pushdescriptors/cube",
    "radialblur/colorpass",
    "radialblur/phongpass",
    "radialblur/radialblur",
    "rayquery/scene",
    "renderheadless/triangle",
    "screenshot/mesh",
    "shaderobjects/phong",
    "shadowmapping/offscreen",
    "shadowmapping/quad",
    "shadowmapping/scene",
    "shadowmappingomni/cubemapdisplay",
    "shadowmappingomni/offscreen",
    "shadowmappingomni/scene",
    "specializationconstants/uber",
    "sphericalenvmapping/sem",
    "ssao/blur",
    "ssao/composition",
    "ssao/fullscreen",
    "ssao/gbuffer",
    "ssao/ssao",
    "stencilbuffer/outline",
    "stencilbuffer/toon",
    "tessellation/base",
    "tessellation/passthrough",
    "tessellation/pntriangles",
    "textoverlay/mesh",
    "textoverlay/text",
    "texture",
    "texture3d",
    "texturearray/instancing",
    "texturecubemap/reflect",
    "texturecubemap/skybox",
    "texturecubemaparray/reflect",
    "texturecubemaparray/skybox",
    "texturemipmapgen/texture",
    "triangle",
    "vertexattributes/scene",
    "vulkanscene/logo",
    "vulkanscene/mesh",
    "vulkanscene/skybox",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu.git", branch = "main" }

[profile.release]
panic = "abort"
opt-level = 3
